--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.17.2",
     "hbs": "^4.0.1",
-    "mongoose": "^5.2.10",
+    "mongoose": "^5.13.13",
     "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
+    "passport": "^0.5.0",
+    "passport-local-mongoose": "^6.1.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
