--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.27.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "dotenv": "^6.0.0",
@@ -17,6 +18,8 @@
     "hbs": "^4.0.1",
     "mongoose": "^5.13.13",
     "morgan": "^1.9.0",
+    "multer": "^1.4.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.5.0",
     "passport-local-mongoose": "^6.1.0",
